# image_segmentation_runner

./: CMakeLists.txt
include/segmenter/: errors.hpp  onnx_segmenter.hpp  types.hpp
src/: main.cpp  onnx_segmenter.cpp
